Fixed hover shrinking projects on mobile

--- a/src/pages/ProjectsPage.module.css
+++ b/src/pages/ProjectsPage.module.css
@@ -41,18 +41,25 @@
 .project:hover {
     filter: grayscale(0);
     width: 27%;
-
 }
 
 @media only screen and (max-width: 1100px) {
     .project {
       width: 40%
     }
+    .project:hover {
+        filter: grayscale(0);
+        width: 40%;
+    }
 }
 
 @media only screen and (max-width: 600px) {
     .project {
       width: 80%
+    }
+    .project:hover {
+        filter: grayscale(0);
+        width: 80%;
     }
 }
 
